--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/KevCJones/turbo-potato#readme",
   "devDependencies": {
+    "browser-sync": "^2.11.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
@@ -31,6 +32,8 @@
   },
   "jspm": {
     "dependencies": {
+      "bootstrap-sass": "github:twbs/bootstrap-sass@^3.3.6",
+      "scss": "github:KevCJones/plugin-scss@^0.2.5",
       "text": "github:systemjs/plugin-text@^0.0.4"
     },
     "devDependencies": {
